# pat

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  litestream.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
authy/: forms.py  models.py
authy/migrations/: 0001_initial.py
core/: admin.py  data_views.py  factories.py  filters.py  forms.py  models.py  services.py  tables.py  urls.py  views.py
core/management/commands/: generate_test_data.py
core/migrations/: 0001_initial.py  0002_accomplishment_image.py  0002_alter_accomplishment_challenge_and_more.py  0003_alter_accomplishment_image.py  0004_compliment.py
core/signals/: handlers.py
core/templates/core/: dashboard.html  index.html  navbar.html  skeleton.html
core/templates/core/accomplishment/: create.html  create_suggested_tags_fragment.html  delete.html  list.html  list_fragment.html  update.html  view_fragment.html
core/templates/core/compliment/: create.html  delete.html  list.html  update.html  view_fragment.html
core/tests/: test_permissions.py
docs/: project.org
pat/: asgi.py  settings.py  urls.py  wsgi.py
pat/settings/: common.py  local.py  prod.py  test.py
