[tool.poetry]
name = "pat"
version = "0.1.0"
description = ""
authors = ["Tristan Kernan <tristanmkernan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-allauth = "^0.54.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-htmx = "^1.14.0"
gunicorn = "^20.1.0"
python-decouple = "^3.8"
whitenoise = "^6.4.0"
django-guardian = "^2.4.0"
django-taggit = "^3.1.0"
django-tables2 = "^2.5.3"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
